2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version to 0.99.1 for unstable development
	Stable branch is gnome-2-22

2008-03-28  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendsftp.c:
	* daemon/gvfsjobclosewrite.c:
	Plug some more minor memory leaks.

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.2.2 ===

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* daemon/Makefile.am (gvfsd_smb_SOURCES):
	Dist libsmb-compat.h.

	* NEWS:
	Update for release

2008-03-28  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Silence out libtool if
	make is invoked with --silence.

2008-03-28  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendtrash.c: plug some minor memory leaks.

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfileenumerator.c (g_daemon_file_enumerator_next_file):
	Actually increment count so that timeouts works.
	Pointed out by Joe Marcus Clarke

2008-03-27  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Handle all target exists errors correctly
	in move. This should make us not silently
	overwrite files.
	
        * daemon/gvfsjobmove.[ch]:
        Add g_vfs_job_move_progress_callback

2008-03-27  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Introduce helpers for multi-request ops.
	Use it for query_info.

2008-03-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
	Implement true async query_filesystem_info

2008-03-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileenumerator.c:
        (g_daemon_file_enumerator_next_file):
	Avoid hanging forever and not sending any async messages.
	This could happen if we raced and missed the done check.

2008-03-26  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsmonitor.c:
	Send replies to subscribe and unsubscribe messages.

2008-03-26  Alexander Larsson  <alexl@redhat.com>
