@@ -1,3 +1,8 @@
+2008-03-28  Benjamin Otte  <otte@gnome.org>
+
+	* daemon/gvfsbackendftp.c: (ftp_connection_pop_job):
+	fix race that could cause uploads to stop
+
 2008-03-28  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.ac:
